-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
if getting new sequence fail for a reason, then OSP can hit an assertion on reconnect:
[ 40.651226] LustreError: 8347:0:(osp_precreate.c:1286:osp_precreate_thread()) ASSERTION( d->opd_obd->u.cli.cl_seq->lcs_exp != ((void *)0) ) failed: [ 40.651422] LustreError: 8347:0:(osp_precreate.c:1286:osp_precreate_thread()) LBUG [ 40.651528] Pid: 8347, comm: osp-pre-10-1 4.18.0 #3 SMP Tue Sep 26 15:15:16 UTC 2023 [ 40.651633] Call Trace TBD: [ 40.651667] [<0>] libcfs_call_trace+0x5e/0x80 [libcfs] [ 40.651730] [<0>] lbug_with_loc+0x3a/0x60 [libcfs] [ 40.651791] [<0>] osp_precreate_thread+0x16c5/0x2340 [osp] [ 40.651895] [<0>] kthread+0x14a/0x170 [ 40.651937] [<0>] ret_from_fork+0x24/0x30 [ 40.651996] Kernel panic - not syncing: LBUG